--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "bynder-js-sdk",
+  "name": "@bynder/bynder-js-sdk",
   "version": "1.0.0",
   "description": "Bynder Javascript SDK",
-  "main": "bynder-js-sdk.js",
+  "main": "./dist/bynder-js-sdk.js",
   "scripts": {
-    "test": "jasmine tests/*"
+    "test": "jasmine tests/*",
+    "build": "gulp babel",
+    "prepublish": "npm run build"
   },
   "author": "Bynder",
   "license": "MIT",
