--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel": "^6.5.2",
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.9",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-polyfill": "^6.20.0",
     "babel-preset-env": "^1.1.1",
     "eslint": "~3.7.1",
