--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "webpack": "^1.14.0"
   },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.18.0",
+    "isomorphic-form-data": "^1.0.0",
     "node-fetch": "^1.6.0",
     "oauth-1.0a": "^1.0.1"
   },
