--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ language: node_js
 sudo: false
 
 node_js:
-  - "6"
-  - "7"
-  - "8"
-  - "9"
-  - "10"
+- '6'
+- '7'
+- '8'
+- '9'
+- '10'
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_4c6b84b54e85_key -iv $encrypted_4c6b84b54e85_iv
+  -in secret.json.enc -out secret.json -d
