--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel-polyfill": "^6.20.0",
     "babel-preset-env": "^1.1.1",
     "eslint": "~3.7.1",
-    "eslint-config-airbnb": "~12.0.0",
+    "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "~1.16.0",
     "eslint-plugin-jsx-a11y": "~2.2.3",
     "eslint-plugin-react": "~6.4.1",
