--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,4 @@ node_js:
 - '10'
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_4c6b84b54e85_key -iv $encrypted_4c6b84b54e85_iv
-  -in secret.json.enc -out secret.json -d
+- openssl aes-256-cbc -K $encrypted_4c6b84b54e85_key -iv $encrypted_4c6b84b54e85_iv -in secret.json.enc -out secret.json -d
