--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ node_js:
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_4c6b84b54e85_key -iv $encrypted_4c6b84b54e85_iv -in secret.json.enc -out secret.json -d
+
+script: gulp jasmine
