--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,10 @@ node_js:
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_4c6b84b54e85_key -iv $encrypted_4c6b84b54e85_iv -in secret.json.enc -out secret.json -d
+
+notifications:
+  email:
+    recipients:
+      - ajax@bynder.com
+    on_success: never
+    on_failure: always
