Improve parameter handling and URL construction
This change fixes a few bugs around how we handle parameters, and makes
both that and url construction more robust. To name a few:

- URLs with query parameters are now built using some libraries instead
  of string concatenation
- We're now avoiding mutating parameter objects, which was a source of
  bugs for consumers.

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,9 +12,9 @@
         // http://eslint.org/docs/rules/indent
         "indent": ["error", 4],
 
-        // enforce the max line length to be 120 chars
-        // http://eslint.org/docs/rules/max-len
-        "max-len": ["error", 120],
+        "max-len": "off",
+
+        "no-shadow": "off",
 
         // disallowing comma trailing
         // http://eslint.org/docs/rules/max-len
