--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "author": "Bynder",
   "license": "MIT",
+  "files": ["dist/bynder-js-sdk.js"],
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.20.0",
