--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "gulp babel",
-    "prepublish": "npm run build"
+    "prepublish": "gulp babel"
   },
   "author": "Bynder",
   "license": "MIT",
@@ -14,38 +14,37 @@
     "dist/bynder-js-sdk.js"
   ],
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.9",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-env": "^1.1.1",
-    "eslint": "~4.18.2",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "~1.16.0",
-    "eslint-plugin-jsx-a11y": "~2.2.3",
-    "eslint-plugin-react": "~6.4.1",
+    "@babel/preset-env": "^7.6.2",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "~6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "~2.18.2",
+    "eslint-plugin-jsx-a11y": "~6.2.3",
+    "eslint-plugin-react": "~7.15.1",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-connect": "^5.0.0",
-    "gulp-eslint": "^3.0.1",
-    "gulp-jsdoc3": "^0.3.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-connect": "^5.7.0",
+    "gulp-eslint": "^6.0.0",
+    "gulp-jsdoc3": "^2.0.0",
     "istanbul": "^0.4.5",
-    "jest": "^24.1.0",
-    "json-loader": "^0.5.4",
+    "jest": "^24.9.0",
+    "json-loader": "^0.5.7",
     "path": "^0.12.7",
-    "webpack": "^1.14.0"
+    "webpack": "^4.41.0"
   },
   "dependencies": {
+    "@babel/core": "^7.6.2",
     "axios": "^0.19.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "is-url": "^1.2.4",
-    "isomorphic-form-data": "^1.0.0",
-    "nanoid": "^2.0.1",
-    "node-fetch": "^1.6.0",
-    "oauth-1.0a": "^1.0.1",
-    "proper-url-join": "^1.2.0",
-    "query-string": "^6.1.0",
-    "simple-oauth2": "^2.2.1"
+    "isomorphic-form-data": "^2.0.0",
+    "proper-url-join": "^2.0.1",
+    "query-string": "^6.8.3",
+    "simple-oauth2": "^2.5.1"
   },
   "repository": "git@github.com:Bynder/bynder-js-sdk.git"
 }
