--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.15.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0",
     "gulp-connect": "^5.7.0",
