fix dependencies and gulp babel

--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "dist/bynder-js-sdk.js"
   ],
   "devDependencies": {
-    "@babel/preset-env": "^7.6.2",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "~3.7.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.15.1",
     "gulp": "^3.9.1",
-    "gulp-babel": "^8.0.0",
+    "gulp-babel": "^7.0.1",
     "gulp-connect": "^5.7.0",
     "gulp-eslint": "^6.0.0",
     "gulp-jsdoc3": "^2.0.0",
@@ -34,13 +35,14 @@
     "webpack": "^4.41.0"
   },
   "dependencies": {
-    "@babel/core": "^7.6.2",
     "axios": "^0.19.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "is-url": "^1.2.4",
-    "isomorphic-form-data": "^2.0.0",
-    "proper-url-join": "^2.0.1",
-    "query-string": "^6.8.3",
+    "isomorphic-form-data": "^1.0.0",
+    "node-fetch": "^1.6.0",
+    "proper-url-join": "^1.2.0",
+    "query-string": "^6.1.0",
     "simple-oauth2": "^2.5.1"
   },
   "repository": "git@github.com:Bynder/bynder-js-sdk.git"
