--- a/package.json
+++ b/package.json
@@ -2,37 +2,41 @@
   "name": "@bynder/bynder-js-sdk",
   "version": "2.3.0",
   "description": "Bynder Javascript SDK",
-  "main": "./dist/bynder-js-sdk.js",
+  "main": "dist/bynder-js-sdk.cjs.js",
+  "module": "dist/bynder-js-sdk.esm.js",
   "scripts": {
-    "test": "jest",
-    "build": "gulp babel",
-    "prepublish": "gulp babel"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "test": "jest --coverage",
+    "lint": "eslint --config .eslintrc src/ tests/",
+    "test:watch": "npm run test -- --watch src/ test/ --notify",
+    "prestest": "npm run lint",
+    "prepublish": "npm run build"
   },
   "author": "Bynder",
   "license": "MIT",
   "files": [
-    "dist/bynder-js-sdk.js"
+    "dist/bynder-js-sdk.cjs.js"
   ],
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "~3.7.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.15.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
-    "gulp-connect": "^5.7.0",
-    "gulp-eslint": "^6.0.0",
-    "gulp-jsdoc3": "^2.0.0",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-spread": "^7.11.0",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "babel-jest": "^26.3.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "eslint": "^7.9.0",
+    "eslint-plugin-import": "^2.22.0",
     "jest": "^24.9.0",
     "json-loader": "^0.5.7",
     "path": "^0.12.7",
-    "webpack": "^4.41.0"
+    "rollup": "^2.28.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -45,5 +49,63 @@
     "query-string": "^6.1.0",
     "simple-oauth2": "^2.5.1"
   },
-  "repository": "git@github.com:Bynder/bynder-js-sdk.git"
+  "repository": "git@github.com:Bynder/bynder-js-sdk.git",
+  "jest": {
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "testMatch": [
+      "<rootDir>/tests/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/dist/**",
+      "!**/resources/**"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/",
+      "/resources/",
+      "/repl.js",
+      "/coverage/",
+      "/samples/",
+      "/rollup.config.js"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "text",
+      "html"
+    ]
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-syntax-dynamic-import",
+      "@babel/plugin-transform-spread",
+      "@babel/plugin-proposal-object-rest-spread"
+    ],
+    "env": {
+      "test": {
+        "plugins": [
+          "transform-es2015-modules-commonjs"
+        ],
+        "presets": [
+          [
+            "@babel/preset-env",
+            {
+              "targets": {
+                "node": "current"
+              }
+            }
+          ]
+        ]
+      }
+    }
+  }
 }
