--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Bynder Javascript SDK",
   "main": "dist/bynder-js-sdk.cjs.js",
   "module": "dist/bynder-js-sdk.esm.js",
+  "browser": "dist/bundle.js",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
@@ -16,7 +17,7 @@
   "author": "Bynder",
   "license": "MIT",
   "files": [
-    "dist/bynder-js-sdk.cjs.js"
+    "dist/bundle.js"
   ],
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -25,23 +26,22 @@
     "@babel/plugin-transform-spread": "^7.11.0",
     "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "babel-jest": "^26.3.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "eslint": "^7.9.0",
     "eslint-plugin-import": "^2.22.0",
     "jest": "^24.9.0",
     "json-loader": "^0.5.7",
     "path": "^0.12.7",
     "rollup": "^2.28.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "is-url": "^1.2.4",
     "isomorphic-form-data": "^1.0.0",
     "node-fetch": "^1.6.0",
@@ -92,9 +92,6 @@
     ],
     "env": {
       "test": {
-        "plugins": [
-          "transform-es2015-modules-commonjs"
-        ],
         "presets": [
           [
             "@babel/preset-env",
