--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "axios": "^0.19.0",
     "is-url": "^1.2.4",
     "isomorphic-form-data": "^1.0.0",
-    "node-fetch": "^1.6.0",
+    "node-fetch": "^2.6.1",
     "proper-url-join": "^1.2.0",
     "query-string": "^6.1.0",
-    "simple-oauth2": "^2.5.1"
+    "simple-oauth2": "^2.5.1",
+    "uuid": "^8.3.0"
   },
   "repository": "git@github.com:Bynder/bynder-js-sdk.git",
   "jest": {
