For no-console and single-quote

--- a/.eslintrc
+++ b/.eslintrc
@@ -48,7 +48,16 @@
     "arrow-body-style": [
       "error",
       "always"
-    ]
+    ],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "no-console": "error"
   },
   "globals" : {
     "window": true
