--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --config .eslintrc src/ tests/",
     "test:watch": "npm run test -- --watch src/ test/ --notify",
     "prestest": "npm run lint",
-    "prepublish": "npm run build",
+    "prepublish": "npm run build && npm run docs",
     "doc": "jsdoc --destination docs --readme README.md src/**/*.js"
   },
   "author": "Bynder",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-spread": "^7.11.0",
     "@babel/polyfill": "^7.11.5",
@@ -86,26 +87,5 @@
       "text",
       "html"
     ]
-  },
-  "babel": {
-    "plugins": [
-      "@babel/plugin-syntax-dynamic-import",
-      "@babel/plugin-transform-spread",
-      "@babel/plugin-proposal-object-rest-spread"
-    ],
-    "env": {
-      "test": {
-        "presets": [
-          [
-            "@babel/preset-env",
-            {
-              "targets": {
-                "node": "current"
-              }
-            }
-          ]
-        ]
-      }
-    }
   }
 }
