--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "Bynder",
   "license": "MIT",
   "files": [
-    "dist/bundle.js"
+    "dist/bynder-js-sdk.cjs.js",
+    "dist/bynder-js-sdk.esm.js"
   ],
   "devDependencies": {
     "@babel/core": "^7.11.6",
