--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bynder/bynder-js-sdk",
+  "name": "@Arpit-Sharma-USC/bynder-js-sdk",
   "version": "2.3.1",
   "description": "Bynder Javascript SDK",
   "main": "./dist/bynder-js-sdk.js",
