--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -26,6 +26,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+        registry-url: https://registry.npmjs.org/
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
+    - run: yarn install
+    - run: npm publish --access public
+      env:
+         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
