--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bynder-test/bynder-js-sdk",
-  "version": "2.3.3",
+  "name": "@bynder/bynder-js-sdk",
+  "version": "2.3.2",
   "description": "Bynder Javascript SDK",
   "main": "./dist/bynder-js-sdk.js",
   "scripts": {
