add status badges

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,6 @@
 # This workflow will upload a js package to npm registry when a release is created
 
-name: Publish SDK to npm
+name: Publish
 
 on:
   release:
