--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Build and Test
     runs-on: ubuntu-latest
 
     strategy:
@@ -24,7 +25,10 @@ jobs:
       - run: npm test
 
   deploy:
+    name: Release
     runs-on: ubuntu-latest
+    needs: build
+
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
