--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-spread": "^7.11.0",
-    "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
-    "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
@@ -37,17 +35,12 @@
     "eslint-plugin-import": "^2.22.0",
     "jest": "^24.9.0",
     "jsdoc": "^3.6.6",
-    "json-loader": "^0.5.7",
-    "path": "^0.12.7",
-    "rollup": "^2.28.2",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup": "^2.28.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "is-url": "^1.2.4",
     "isomorphic-form-data": "^1.0.0",
-    "node-fetch": "^2.6.1",
     "query-string": "^6.1.0",
     "simple-oauth2": "^2.5.1",
     "uuid": "^8.3.0"
