--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "eslint-plugin-import": "^2.22.0",
     "jest": "^24.9.0",
     "jsdoc": "^3.6.6",
-    "rollup": "^2.28.2"
+    "rollup": "^2.28.2",
+    "yargs": "^16.2.0"
   },
   "dependencies": {
     "axios": "^0.19.0",
