--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "coverageDirectory": "coverage",
     "coverageReporters": [
       "text",
-      "html"
+      "html",
+      "lcov"
     ]
   }
 }
