Use a NPM task to run the Coveralls script

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,10 +29,8 @@ jobs:
           npm install coveralls --save-dev
 
       - name: Run tests && coverage
-        run: npm test
-
-      - name: Coverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          coveralls < coverage/lcov.info
+          npm test
+          npm run coveralls
