--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:watch": "npm run test -- --watch src/ test/ --notify",
     "pretest": "npm run lint",
     "prepublish": "npm run build && npm run docs",
-    "docs": "jsdoc --destination docs --readme README.md src/**/*.js"
+    "docs": "jsdoc --destination docs --readme README.md src/**/*.js",
+    "coveralls": "coveralls < coverage/lcov.info"
   },
   "author": "Bynder",
   "license": "MIT",
