Force lodash upgrade to 4.17.21

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "yargs-parser": "13.1.2"
   },
   "resolutions": {
-    "graceful-fs": "^4.2.4"
+    "graceful-fs": "^4.2.4",
+    "lodash": "^4.17.21"
   },
   "repository": "git@github.com:Bynder/bynder-js-sdk.git"
 }
