--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
   },
   "resolutions": {
     "graceful-fs": "^4.2.4",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "@hapi/hoek": "8.5.0"
   },
   "repository": "git@github.com:Bynder/bynder-js-sdk.git"
 }
