--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,10 @@ on:
   release:
     types: [ published ]
 
+permissions:
+  contents: read
+  pull-requests: read
+
 jobs:
   build:
     name: Build and Test
