--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.15.1",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-connect": "^5.7.0",
     "gulp-eslint": "^6.0.0",
-    "gulp-jsdoc3": "^2.0.0",
+    "gulp-jsdoc3": "^3.0.0",
     "jest": "^28.1.3",
     "json-loader": "^0.5.7",
     "path": "^0.12.7",
@@ -55,7 +55,11 @@
   "resolutions": {
     "graceful-fs": "^4.2.4",
     "lodash": "^4.17.21",
-    "@hapi/hoek": "8.5.1"
+    "@hapi/hoek": "8.5.1",
+    "json5": "1.0.2",
+    "postcss": "8.4.31",
+    "sanitize-html": "2.12.1",
+    "send": "0.19.0"
   },
   "repository": "git@github.com:Bynder/bynder-js-sdk.git"
 }
