--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bynder/bynder-js-sdk",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "description": "Bynder Javascript SDK",
   "main": "./dist/bynder-js-sdk.js",
   "scripts": {
@@ -41,7 +41,7 @@
     "@babel/core": "^7.26.9",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
-    "axios": "^0.28.0",
+    "axios": "^0.30.0",
     "elliptic": "6.6.1",
     "handlebars": "4.7.7",
     "ini": "1.3.8",
@@ -57,6 +57,7 @@
   },
   "resolutions": {
     "braces": "^3.0.3",
+    "form-data": "4.0.4",
     "graceful-fs": "^4.2.4",
     "lodash": "^4.17.21",
     "json5": "2.2.3",
